# typedhandler

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  .testcoverage.yml  CHANGELOG.md  LICENSE  Makefile  README.md  benchmark.txt  go.mod  go.sum
.github/: copilot-instructions.md
.github/instructions/: gopls.instructions.md
.github/workflows/: docs.yml  golangci.yml
benchmarks/: benchmark.txt  statistics.txt
docs/: Makefile  mkdocs.yml  pyproject.toml
docs/src/: changelog.md  index.md
docs/src/concepts/: components.md  parser-func.md  request-flow.md  struct-tag-based.md
docs/src/features/: error-handling.md  pre-parsing.md
examples/sample/: sample.go  sample_easyjson.go
examples/simple/: main.go
lab/banchmarks/: len_vs_equal_empty_string_test.go
typedhandler/: data_conversion.go  data_conversion_test.go  handler.go  handler_create_handler_test.go  handler_test.go  instance_pool.go  instance_pool_test.go  interfaces.go  parser.go  parser_infos.go  parser_test.go  sample.go  sample_easyjson.go  schema_helper.go  schema_helper_test.go  time_parser.go  time_parser_test.go  typing.go  typing_test.go
